name:                proxy-mantab
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/proxy-mantab#readme
license:             BSD3
license-file:        LICENSE
author:              Moch Deden
maintainer:          moch.deden.r@gmail.com
copyright:           2017 Moch Deden
category:            Util
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable proxy-mantab
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , scalpel
                       , split
                       , text  





